# terazi

./: .elek.yml  .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: elek.yml
configs/: terazi_core.yaml  terazi_fin.yaml  terazi_legal.yaml  terazi_tool.yaml
docs/: data.json  index.html
scripts/: generate_all.sh  run_eval.sh
terazi/: __init__.py  cli.py  leaderboard.py
terazi/eval/: __init__.py  formats.py  metrics.py  prompts.py  runner.py
terazi/generate/: __init__.py  base.py  core.py  fin.py  legal.py  tool.py
