[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terazi"
version = "0.1.0"
description = "Comprehensive benchmark suite for Turkish language models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Selim Ozten" },
]
keywords = ["benchmark", "turkish", "nlp", "llm", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "boto3>=1.34",
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
    "datasets>=2.0",
    "rouge-score>=0.1",
    "sacrebleu>=2.0",
    "transformers>=4.30",
    "torch>=2.0",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[project.scripts]
terazi = "terazi.cli:cli"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
